# smr

./: .gitignore  CMakeLists.txt  CommFunc.cpp  CommFunc.h  Makefile  README.md  README.txt  SMR.cpp  SMR.h  SMR_data.cpp  SMR_data.h  SMR_data_p1.cpp  SMR_data_p1.h  SMR_data_p2.cpp  SMR_data_p2.h  SMR_data_p3.cpp  SMR_data_p3.h  SMR_plot.cpp  SMR_plot.h  StatFunc.cpp  StatFunc.h  StrFunc.cpp  StrFunc.h  bfile.hpp  configure  configure.ac  dcdflib.cpp  eData.cpp  eData.h  new.c
C/: avl_tree.c  avl_tree.h  besd_parser.c  calcu.c  calmt.c  calmt.h  file_parser.c  file_parser.h  my_functions.c  my_functions.h  plink_parser.c
CPP/: CommFunc.cpp  SMR.cpp  SMR_data.cpp  SMR_data_p1.cpp  SMR_data_p1.hpp  SMR_data_p2.cpp  SMR_data_p2.hpp  SMR_data_p3.cpp  SMR_main.hpp  StatFunc.cpp  bfile.cpp  bfile.hpp  calmt.cpp  calmt.hpp  main.cpp
docs/: changlog.txt
src/: CommFunc.hpp  SMR.cpp  SMR.hpp  SMR_data.cpp  SMR_data.hpp  SMR_data_p1.cpp  SMR_data_p1.hpp  SMR_data_p3.cpp  SMR_data_p3.hpp  SMR_plot.cpp  SMR_plot.hpp  StatFunc.hpp  StrFunc.cpp  config.h  dcdflib.cpp
